--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,53 @@
 
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Agendamentos - Madame Serena</title>
-  <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/main.min.css' rel='stylesheet' />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calendário de Agendamentos</title>
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 20px; background: #fff8f0; }
-    h1 { text-align: center; color: #5a2e2e; }
-    #calendar { max-width: 900px; margin: 0 auto; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fffdf7;
+    }
+    h1 {
+      text-align: center;
+      color: #5d2b1f;
+      padding: 20px 0 10px;
+    }
+    #calendar {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
   <h1>Calendário de Agendamentos</h1>
-  <div id='calendar'></div>
-
-  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/main.min.js'></script>
+  <div id="calendar"></div>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      const calendarEl = document.getElementById('calendar');
-
-      const calendar = new FullCalendar.Calendar(calendarEl, {
+      var calendarEl = document.getElementById('calendar');
+      var calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'dayGridMonth',
         locale: 'pt-br',
+        headerToolbar: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
         selectable: true,
         dateClick: function(info) {
-          if (confirm('Deseja ativar/desativar esta data?')) {
-            fetch('/api/bloquear', {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ data: info.dateStr })
-            }).then(() => calendar.refetchEvents());
-          }
-        },
-        events: function(fetchInfo, successCallback, failureCallback) {
-          Promise.all([
-            fetch('/api/agendamentos').then(res => res.json()),
-            fetch('/api/bloqueios').then(res => res.json())
-          ]).then(([agendamentos, bloqueios]) => {
-            const eventos = [
-              ...agendamentos.map(a => ({
-                title: a.nome,
-                start: a.data,
-                color: '#3179f6'
-              })),
-              ...bloqueios.map(b => ({
-                title: 'Bloqueado',
-                start: b,
-                color: '#e74c3c'
-              }))
-            ];
-            successCallback(eventos);
-          });
+          alert('Data selecionada: ' + info.dateStr);
         }
       });
-
       calendar.render();
     });
   </script>
